# OpenTASS

./: .env.defaults  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  current_class.py  daily_notices.py  login.py  main.py  pyproject.toml  requirements.txt  setup.cfg  timetable.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
src/opentass/: __init__.py  academic_reports.py  attendance.py  curricular_activities.py  daily_notices.py  events_and_payments.py  login.py  timetable.py
